# Pokemon_Dashboard_Project_BIUDS22

./: README.md  main.py  pyproject.toml  requirements.txt
