[tool.poetry]
name = "class-project-test"
version = "0.1.0"
description = ""
authors = ["Efrat Klyman <efrat.margalit@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

